--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-edition = "2021"
 name = "mdarray"
 version = "0.3.0"
+edition = "2021"
+rust-version = "1.65"
 description = "Multidimensional array for Rust"
-keywords = ["array", "matrix", "multidimensional"]
-license = "MIT OR Apache-2.0"
 repository = "https://github.com/fre-hu/mdarray"
+license = "MIT OR Apache-2.0"
+keywords = ["array", "matrix", "multidimensional"]
+categories = ["data-structures", "mathematics", "science"]
 
 [dependencies]
 serde = { version = "1.0", optional = true }
@@ -14,5 +16,6 @@ serde = { version = "1.0", optional = true }
 serde_test = "1.0"
 
 [features]
+nightly = []
 permissive-provenance = [] # Required for testing in Miri, see the issue:
                            # https://github.com/rust-lang/unsafe-code-guidelines/issues/256
