Add no_std support based on https://github.com/kulst/mdarray commit 118017a, see #10
Co-authored-by: kulst <60887784+kulst@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,12 @@ keywords = ["array", "matrix", "multidimensional"]
 categories = ["data-structures", "mathematics", "science"]
 
 [dependencies]
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0", default-features = false, optional = true }
 
 [dev-dependencies]
 serde_test = "1.0"
 
 [features]
-nightly = [] # Required for testing in Miri by using extern types, see:
-             # https://github.com/rust-lang/unsafe-code-guidelines/issues/256
+default = ["std"]
+nightly = []
+std = []
